--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     // DB
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
