setting : test application.yml 설정

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,3 +14,29 @@ spring:
         format_sql: true
     open-in-view: false
 
+oauth:
+  kakao:
+    response-type: responseType
+    client-id: clientId
+    url:
+      auth-url: authUrl
+      api-url: apiIrl
+      redirect-url: redirectUrl
+
+  naver:
+    response-type: responseType
+    client-id: clientId
+    client-secret: clientSecret
+    state: state
+    url:
+      auth-url: authUrl
+      api-url: apiUrl
+      redirect-url: redirectUrl
+
+jwt:
+  claim-id: id
+  claim-role: role
+  secret-key: secretKey
+  access-token-expire-time: 10
+  refresh-token-expire-time: 30
+
