--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.7'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.epages.restdocs-api-spec' version '0.18.2'
+    id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
 group = 'kyonggiyo'
@@ -22,12 +24,13 @@ repositories {
 }
 
 // Plain jar 생성하지 않도록
-jar{
+jar {
     enabled = false
 }
 
-// SpringCloud setting
 ext {
+    set('snippetsDir', file("build/generated-snippets"))
+    // SpringCloud setting
     set('springCloudVersion', "2022.0.3")
 }
 
@@ -65,6 +68,35 @@ dependencies {
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation group: 'org.instancio', name: 'instancio-junit', version: '3.0.0'
+
+    // Documentation
+    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.3'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+}
+
+openapi3 {
+    server = 'http://localhost:8080'
+    title = 'Kyonggiyo API Document'
+    description = '경기요 API 문서'
+    version = "${project.version}"
+    outputFileNamePrefix = 'api'
+    outputDirectory = 'build/resources/main/static/'
+}
+
+tasks.register('copyDocs') {
+    dependsOn(':openapi3')
+    doLast {
+        delete 'src/main/resources/static/api.json'
+        copy {
+            from "build/resources/main/static/api.json"
+            into "src/main/resources/static/"
+        }
+    }
+}
+
+bootJar {
+    dependsOn(':copyDocs')
 }
 
 tasks.named('test') {
