refactor: CD 스크립트, build.gradle 수정 - 배포 환경에 맞도록 반영

--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,10 @@ dependencies {
 }
 
 openapi3 {
-    server = 'http://localhost:8080'
+    servers = [
+            { url = "http://localhost:8080" },
+            { url = "https://dev.kyonggiyo.site" }
+    ]
     title = 'Kyonggiyo API Document'
     description = '경기요 API 문서'
     version = "${project.version}"
