--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -79,8 +79,9 @@ jobs:
           key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
           script: |
             sudo docker ps
+            sudo docker stop prod
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_PROD_REPO }}
-            sudo docker run -d --env-file .env -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
+            sudo docker run -d --env-file .env -p 8081:8080 --name prod ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
             sudo docker image prune -f
 
       - name: 개발환경 배포
@@ -93,6 +94,7 @@ jobs:
           key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
           script: |
             sudo docker ps
+            sudo docker stop dev
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
-            sudo docker run -d --env-file .env -p 8082:8080 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
+            sudo docker run -d --env-file .env -p 8082:8080 --name dev ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}
             sudo docker image prune -f
