refactor : RedisConfig 수정 - 사용하지 않는 템플릿 삭제 - AWS EC Redis 연결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
         format_sql: true
     show-sql: true
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+
 springdoc:
   swagger-ui:
     urls:
