--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,10 @@ dependencies {
     testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.3'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+    // CloudWatch
+    implementation "ca.pjer:logback-awslogs-appender:1.6.0"
+
 }
 
 openapi3 {
