--- a/build.gradle
+++ b/build.gradle
@@ -74,8 +74,11 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-    // CloudWatch
+    // AWS CloudWatch
     implementation "ca.pjer:logback-awslogs-appender:1.6.0"
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
 
