build: aws s3 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,8 +59,11 @@ jwt:
 
 cloud:
   aws:
+    region: ap-northeast-2
     credentials:
-       accessKey: ${AWS_ACCESS_KEY}
-       secretKey: ${AWS_SECRET_KEY}
+       access-key: ${AWS_ACCESS_KEY}
+       secret-key: ${AWS_SECRET_KEY}
+    s3:
+      bucket-name: ${S3_BUCKET_NAME}
 
-test: false
+web-application: true
