build: JSONObject 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
+    // JSON
+    implementation 'org.json:json:20230618'
+
     // DB
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
