:sparkles: 이미지 생성 실패 이벤트 재처리 스케줄링 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,3 +67,9 @@ cloud:
       bucket-name: ${S3_BUCKET_NAME}
 
 web-application: true
+
+logging:
+  level:
+    org:
+      springframework:
+        jdbc: debug
