--- a/build.gradle
+++ b/build.gradle
@@ -6,27 +6,20 @@ plugins {
     id 'org.hidetake.swagger.generator' version '2.18.2' apply(false)
 }
 
-jar {
-    enabled = false
-}
-
 java {
     sourceCompatibility = '17'
 }
 
-allprojects {
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-
+subprojects {
     group = 'kyonggiyo'
     version = '1.1'
 
     repositories {
         mavenCentral()
     }
-}
 
-subprojects {
+    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'java-test-fixtures'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
@@ -56,7 +49,7 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok'
 
         // Test
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test' exclude(group: 'com.vaadin.external.google')
     }
 
     tasks.named('test') {
@@ -64,4 +57,3 @@ subprojects {
     }
 
 }
-
