:ambulance: 멀티모듈 수정에 따른 CI 스크립트 & Logback 수정

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
 
      - name: 환경변수 파일 생성
        run: echo "test" >> .env
-       working-directory: src/main/resources
+       working-directory: kyonggiyo-api/src/main/resources
       
      - name: Gralde 캐싱
        id: gradle-cache
